svn255: [#15] Tidy up sonar and checkstyle